Finished fonts and fixed spacing throughout page. Only items left are sprites and image borders.

--- a/main.css
+++ b/main.css
@@ -19,6 +19,8 @@
 	/*Places 6px gap between text and top of header.*/
 	margin-right: 13px;
 	/*places 13 pix gap on right between dark orange padding and savings text.*/
+	font-family: 'Roboto', sans-serif;
+	font-weight: 300;;
 }
 
 .savingsbar{
@@ -27,9 +29,22 @@
 	margin-left: 95px;
 }
 
-.savings {
+.savings1 {
 	display: inline;
 	font-size: 12px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 300;
+	position: relative;
+	top: 6px;
+	/*Places 6px gap between text and top of header*/
+	margin-right: 16px;
+}
+
+.savings {
+	display: inline;
+	font-size: 13px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 300;
 	position: relative;
 	top: 6px;
 	/*Places 6px gap between text and top of header*/
@@ -50,24 +65,27 @@
 
 .navs {
 	float: left;
-	margin-right: 17px;
-	margin-top: 41px;
+	margin-right: 20px;
+	margin-top: 36px;
 
 }
 
 .navs a {
 	text-decoration: none;
-	color: gray;
-	font-size: 18px;
+	color: #7A7A7A;
+	font-size: 23px;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: 300;
 }
 
 .cart {
-	border: 1px solid gray;
+	border: 1px solid #E7E7E7;
+	border-radius: 3px;
 	float: left;
 	width: 80px;
-	height: 30px;
+	height: 28px;
 	margin-top: 36px;
-	margin-left: 101px;
+	margin-left: 105px;
 	/*Places shopping cart box in proper location. Weird things were happening when
 	trying to add the .cart div next to the navs.*/
 }
@@ -111,13 +129,21 @@ float: left;
 
 .searchform input {
 	margin-top: 9px;
-	height: 22px;
-	width: 130px;
+	height: 18px;
+	width: 120px;
+	color: #A4A4A4;
+	font-family: 'Roboto', sans-serif;
+	font-size: 10px;
+	box-shadow: 0px 0px 3px 3px #EEEEEE;
+	border: 1px solid #E2E2E2;
+	border-radius: 3px;
 }
 
 .search-container div a {
 	text-decoration: none;
-	color: gray;
+	color: #878787;
+	font-family: 'Merriweather Sans', sans-serif;
+	font-size: 10px;
 }
 
 .signin-container {
@@ -139,7 +165,6 @@ float: left;
 .body1 {
 	background: #F4F4F4;
 	height: 350px;
-	border-bottom: 1px solid black;
 }
 
 .tiecontainer {
@@ -178,6 +203,7 @@ float: left;
 	font-family: 'Roboto', sans-serif;
 	margin-top: 51px;
 	margin-left: 324px;
+	font-weight: lighter;
 }
 
 .body2 {
@@ -186,7 +212,7 @@ float: left;
 }
 
 .tiecontainer2 {
-	margin-top: 43px;
+	margin-top: 20px;
 	margin-left: 100px;
 	overflow: auto;
 }
@@ -203,11 +229,12 @@ float: left;
 
 h2 {
 	position: absolute;
-	top: 18px;
+	top: 16px;
 	right: 18px;
 	margin: 0px;
 	font-family: 'Work Sans', sans-serif;
-	font-weight: bold;
+	font-size: 20px;
+	text-align: right;
 }
 
 
@@ -217,7 +244,7 @@ h2 {
 
 .tiehistory1 {
 	font-size: 32px;
-	margin-top: 39px;
+	margin-top: 63px;
 	margin-left: 230px;
 	clear: left;
 	font-family: 'Titillium Web', sans-serif;
@@ -228,26 +255,28 @@ h2 {
 .tiehistory2 {
 	font-size: 32px;
 	margin-left: 210px;
+	margin-top: -5px;
 	font-family: 'Titillium Web', sans-serif;
 	font-style: italic;
 	font-weight: lighter;
 }
 
 .viewstory {
-	font-size: 15px;
-	margin-left: 500px;
-	margin-top: 20px;
-	font-family: 'Jura', sans-serif;
+	font-size: 13px;
+	margin-left: 480px;
+	margin-top: 12px;
+	font-family: 'Merriweather Sans', sans-serif;
 }
 
 .viewstory a {
 	text-decoration: none;
-	color: #0099F7;
+	color: #66BDF9;
+
 }
 
 .body3 {
 	background: white;
-	height: 300px;
+	height: 198px;
 	bottom-border: 1px solid gray;
 }
 
@@ -259,17 +288,27 @@ h2 {
 .body3row {
 	width: 200px; 
 	float: left;
-	margin-top: 30px;
 	margin-right: 37px;
+	margin-top: -2px;
+}
+
+.rowcaption {
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 13px;
+	line-height: 18px;
 }
 
 .rowcaption a {
-	color: #009AF7;
+	color: #6EC0FA;
+	font-size: 13px;
+	font-family: 'Roboto Condensed', sans-serif;
 }
 
 .imgheader {
 	font-weight: bold;
-	margin-bottom: 16px;
+	font-style: 'Work Sans', sans-serif;
+	font-size: 14px;
+	margin-bottom: 10px;
 }
 
 .body3img {
@@ -277,20 +316,36 @@ h2 {
 	height: 120px;
 }
 
+.emailcont {
+}
+
 .emailsubmit {
-	margin-top: 20px;
+	margin-top: 16px;
+	width: 160px;
+	height:27px;
+	box-shadow: 0px 0px 3px 3px #EEEEEE;
+	border: 1px solid #E2E2E2;
+	border-radius: 3px;
+	font-size: 12px;
+	margin-left: 2px;
+	padding-left: 8px;
+	color: #A6A6A6;
 }
 
 .subscribe {
 	color: white;
 	background: #24A3F8;
-	margin-top: 20px;
+	margin-top: 10px;
 	font-size: 10px;
 	text-align: center;
-	padding-top: 6px;
-	width: 85px;
-	height: 22px;
-	border-radius: 5px;
+	padding-top: 5px;
+	padding-bottom: 0px;
+	width: 82px;
+	height: 17px;
+	border-radius: 3px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 300;
+	border: 1px solid #0095F7;
 }
 
 .body4 {
@@ -305,15 +360,20 @@ h2 {
 
 .footernavrow {
 	float: left;
-	margin-right: 43px;
+	margin-top: 25px;
+	margin-left: 15px;
 }
 
 .footnavheader {
-	font-weight: bold;
+	font-family: 'Roboto', sans-serif;
+	font-size: 12px;
+	font-weight: 700;
 }
 
 .footnavs {
 	padding-left: 0px;
+	margin-top: 2px;
+	margin-right: 25px;
 }
 
 .footnavs li {
@@ -321,36 +381,85 @@ h2 {
 }
 
 .footnavs li a {
-	color: gray;
+	color: #969696;
+	font-family: 'Roboto', sans-serif;
+	font-size: 12px;
+	font-weight: 300;
 }
 
 .here4u-container {
-	height: 100px;
-	width: 300px;
-	float: right;
-	margin-top: 20px;
-	margin-right: 70px;
-	background: gray;
+	height: 104px;
+	width: 274px;
+	float: left;
+	margin-top: 28px;
+	margin-left: 227px;
+	background: #A1AFBE;
 	position: relative;
+	border: 2px solid #98A7B8;
+	border-radius: 4px;
 }
 
 .here4u {
 	color: white;
-	margin: 15px;
+	margin-top: 10px;
+	margin-left: 15px;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 23px;
+	font-weight: 300;
+	font-style: italic;
+	text-shadow: 2px 2px #8A9BAF;
+}
+
+.help {
+	font-family: 'Roboto', sans-serif;
+	font-size: 14px;
+	color: white;
+	font-weight: 100;
+	margin-top: 14px;
+	margin-left: 14px;
+	text-shadow: 2px 2px #8A9BAF;
 }
 
 .contactus {
 	position: absolute;
-	bottom: 15px;
-	right: 10px;
+	bottom: 18px;
+	right: 15px;
 	background: #24A3F8;
-	padding: 7px;
+	padding: 6px 8px 6px 8px;
 	color: white;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 100;
+	font-size: 15px;
+	border: 2px solid #0591E6;
+	border-radius: 4px;
 
+}
+
+.phonenumber {
+	color: white;
+	font-family: 'Titillium Web', sans-serif;
+	font-size: 17px;
+	font-weight: 200;
+	margin-left: 15px;
+	text-shadow: 2px 2px #8A9BAF;
 }
 
 .footer {
 	clear: left;
+	margin-left: 15px;
+	font-family: 'Work Sans', sans-serif;
+	font-size: 10px;
+	color: #787878;
+	overflow: auto;
+}
+
+.footer div {
+	float: left;
+	margin-top: 17px;
+}
+
+.madeby {
+	margin-left: 10px;
 }
 
 a {
